--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.test.imagedownload"
+    package="com.test.netimageview"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -20,15 +20,13 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.test.imagedownload.MainActivity"
+            android:name="com.test.netimageview.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name="com.test.imagedownload.ImageShowActivity" >
         </activity>
     </application>
 
